--- a/actions.html
+++ b/actions.html
@@ -88,7 +88,7 @@
 							</div>
 						</div>
 						
-						<div class="clearfix"></div>
+						<div class="container"><div class="row"><div class="col-md-12"><div class="clearfix"></div></div></div></div>
 						
 						<div class="actions-element">
 							<img src="/images/actions.jpg" border="0">
