--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 				<div class="row">
 					<h1>О центре</h1>
 					<div class="col-xs-12 col-md-5">
-						<img src="/images/about.jpg" border="0">
+						<img src="/images/about.jpg" border="0" width="100%">
 					</div>
 					<div class="col-xs-12 col-md-7">
 						<P>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </P>
@@ -236,7 +236,7 @@
 			</div>
 		</section>
 		
-		<div class="clearfix"></div>
+		<div class="container"><div class="row"><div class="col-md-12"><div class="clearfix"></div></div></div></div>
 		
 		<section>
 			<div class="container">
@@ -279,7 +279,7 @@
 			</div>
 		</section>
 		
-		<div class="clearfix"></div>
+		<div class="container"><div class="row"><div class="col-md-12"><div class="clearfix"></div></div></div></div>
 		
 		<section>
 			<div class="container nopadding" style="background:#eaeaea;">
@@ -368,7 +368,7 @@
 			</div>
 		</section>
 		
-		<div class="clearfix"></div>
+		<div class="container"><div class="row"><div class="col-md-12"><div class="clearfix"></div></div></div></div>
 		
 		<section>
 			<div class="container">
@@ -395,7 +395,7 @@
 			<div class="container nopadding">
 				<div class="row">
 					<h1>Контакты</h1>
-					<div class="col-xs-12 col-md-12">
+					<div class="col-xs-12 col-md-12 nopadding">
 						<div id="map">
 							<div class="info">
 								<div class="gray block">
@@ -431,18 +431,20 @@
 			</div>
 		</section>
 		
-		<div class="clearfix"></div>
+		<div class="container"><div class="row"><div class="col-md-12"><div class="clearfix"></div></div></div></div>
 		
 		<section>
 			<div class="container nopadding">
 				<div class="row">
 					<h1>Событие дня</h1>
-					<div class="col-xs-12 col-md-12 news-element">
-						<img src="/images/news.jpg" border="0">
-						<div class="info">
-							<h2>Почему публичен умысел?</h2>
-							<P>Трагическое стабилизирует онтологический символический центр современного Лондона при любом их взаимном расположении.</P>
-							<a href="#" class="bluebutton">Подробнее</a>
+					<div class="col-xs-12 col-md-12 nopadding">
+						<div class="news-element">
+							<img src="/images/news.jpg" border="0">
+							<div class="info">
+								<h2>Почему публичен умысел?</h2>
+								<P>Трагическое стабилизирует онтологический символический центр современного Лондона при любом их взаимном расположении.</P>
+								<a href="#" class="bluebutton">Подробнее</a>
+							</div>
 						</div>
 					</div>
 				</div>
