--- a/photo.html
+++ b/photo.html
@@ -74,7 +74,7 @@
 			</div>
 		</section>
 		
-		<div class="clearfix"></div>
+		<div class="container"><div class="row"><div class="col-md-12"><div class="clearfix"></div></div></div></div>
 		
 		<section>
 			<div class="container">
@@ -86,7 +86,7 @@
 			</div>
 		</section>
 		
-		<div class="clearfix"></div>
+		<div class="container"><div class="row"><div class="col-md-12"><div class="clearfix"></div></div></div></div>
 		
 		<section>
 			<div class="container">
